# django-crud

./: README.md  pyproject.toml
snacks/: models.py  tests.py  url.py  views.py
snacks/migrations/: 0001_initial.py
snacks_crud_project/: settings.py
templates/: base.html  snack_create.html  snack_detail.html  snack_list.html  snack_update.html
