[tool.poetry]
name = "django-crud"
version = "0.1.0"
description = ""
authors = ["YousefAbu-Jalboush <yousef.y.jalboush@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.6"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
